--- a/calculator.html
+++ b/calculator.html
@@ -11,12 +11,14 @@
 
 <body class="calculator-page">
 
+    <canvas class="stars"></canvas>
+
     <img src="./assets/woman-s-hand-is-holding-many-coins.jpg" class="bg-img" alt="">
     <div class="overlay">
 
         <div class="container zakat-scroll">
 
-            <h2>Zakat Calculator (PKR)</h2>
+            <h2>Zakat Calculator </h2>
 
             <p id="liveRates" class="liveRates"></p>
 
